convert table image to code in chapter 2

--- a/1 Linux and TCP-IP networking/Linux and TCP-IP networking.tex
+++ b/1 Linux and TCP-IP networking/Linux and TCP-IP networking.tex
@@ -146,7 +146,7 @@ Launch GNS3 and make a network as below. You can use "\textbf{ifconfig \texttt{e
     \caption{The IP addresses of the hosts}
     \vspace{5pt}
     \centering
-    \begin{tabular}{ l c r }
+    \begin{tabular}{ l l l }
         \hline \hline
         Host & IP Address & Subnet Mask \\
         \hline 
