--- a/2 A single segment network/A single segment network.tex
+++ b/2 A single segment network/A single segment network.tex
@@ -107,6 +107,7 @@ Amir Haji Ali Khamseh'i - \FR{امیر حاجی علی خمسه‌ء}\\
 
 \usepackage{tikz}
 \usetikzlibrary{calc}
+\renewcommand{\arraystretch}{1.2}
 
 \begin{document}
     \selectlanguage{english}
@@ -149,7 +150,8 @@ Amir Haji Ali Khamseh'i - \FR{امیر حاجی علی خمسه‌ء}\\
                     \caption{The IP addresses of the hosts}
                     \vspace{5pt}
                     \centering
-                    \begin{tabular}{ l c r }
+                    \large
+                    \begin{tabular}{ l l l }
                         \hline \hline
                         Host & IP Address & Subnet Mask \\
                         \hline 
@@ -163,7 +165,7 @@ Amir Haji Ali Khamseh'i - \FR{امیر حاجی علی خمسه‌ء}\\
                         h7 (guchi) & 128.238.66.107 & 255.255.255.0 \\
                         \hline \hline
                         \end{tabular}
-                \end{table}            
+                \end{table}
             \end{flushleft}
         \end{minipage}
         \begin{minipage}{0.48\textwidth}
@@ -336,10 +338,28 @@ Amir Haji Ali Khamseh'i - \FR{امیر حاجی علی خمسه‌ء}\\
     In this section, we will observe what happens when the same IP address is assigned to two different hosts.
     We will also set an incorrect subnet mask for hosts and see what are the consequences.
     For the next two exercises, we split the current single segment network into two segments, Group A and Group B as shown in Table 2.3, so that they will not interfere with each other.
-    \begin{figure}[H]
+
+    \begin{table}[H]
+        \caption{\textit{Table 2.3.} Host IP addresses and network masks for \textbf{11 Duplicate IP}}
+        \vspace{5pt}
         \centering
-        \includegraphics[width=0.9\textwidth]{img/table2-3.png}
-    \end{figure}
+        \large
+        \begin{tabular}{ l l l l }
+            \hline \hline
+            Group & Host & IP Address & Subnet Mask \\
+            \hline 
+            Group A & h0 (shakti) & 128.238.66.100 & 255.255.255.0 \\
+                    & h1 (vayu) & 128.238.66.100 & 255.255.255.0 \\
+                    & h2 (agni) & 128.238.66.102 & 255.255.255.0 \\
+                    & h3 (apah) & 128.238.66.103 & 255.255.255.0 \\
+                    \hline
+            Group B & h4 (yachi) & 128.238.66.104 & 255.255.255.0 \\
+                    & h5 (fenchi) & 128.238.66.104 & 255.255.255.0 \\
+                    & h6 (kenchi) & 128.238.66.106 & 255.255.255.0 \\
+                    & h7 (guchi) & 128.238.66.107 & 255.255.255.0 \\
+            \hline \hline
+            \end{tabular}
+    \end{table}
 
 \section{Duplicate IP}
     Change the IP address of your workstation as shown in Table 2.3. \\
@@ -372,10 +392,26 @@ Amir Haji Ali Khamseh'i - \FR{امیر حاجی علی خمسه‌ء}\\
     \end{enumerate}
     To avoid confusion, only one machine in each group should generate traffic in each case.
     Clearly, this exercise has to be performed as a team.
-    \begin{figure}[H]
+    \begin{table}[H]
+        \caption{\textit{Table 2.4.} Host IP addresses and network masks for \textbf{12 IP subnet}}
+        \vspace{5pt}
         \centering
-        \includegraphics[width=0.9\textwidth]{img/table2-4.png}
-    \end{figure}
+        \begin{tabular}{ l l l l }
+            \hline \hline
+            Group & Host & IP Address & Subnet Mask \\
+            \hline 
+            Group A & h0 (shakti) & 128.238.66.100 & 255.255.255.240 \\
+                    & h1 (vayu) & 128.238.66.101 & 255.255.255.0 \\
+                    & h2 (agni) & 128.238.66.102 & 255.255.255.0 \\
+                    & h3 (apah) & 128.238.66.120 & 255.255.255.240 \\
+                    \hline
+            Group B & h4 (yachi) & 128.238.66.104 & 255.255.255.240 \\
+                    & h5 (fenchi) & 128.238.66.105 & 255.255.255.0 \\
+                    & h6 (kenchi) & 128.238.66.106 & 255.255.255.0 \\
+                    & h7 (guchi) & 128.238.66.121 & 255.255.255.240 \\
+            \hline \hline
+            \end{tabular}
+    \end{table}
     \subsection*{Report}
     Explain what happened in each case according to the \textbf{tcpdump} outputs saved.
     Explain why \texttt{apah} (or \texttt{guchi} in Group B) could not be reached from other hosts, whereas \texttt{shakti} (or \texttt{yachi} in Group B), which has the same incorrect subnet mask, could communicate with the other hosts.
