--- a/4 Static and dynamic routing/Static and Dynamic routing.tex
+++ b/4 Static and dynamic routing/Static and Dynamic routing.tex
@@ -170,7 +170,7 @@
     \textbf{tcpdump -x -s 100 -c 4 -w exe2.out udp port 520} \\
     Save the routing table in your workstation.
     Note the number of hops needed to reach destinations other than in your own subnet. \\
-    Run \textbf{ethereal -r exe2.out \&} to load the packet trace recorded by the above \textbf{tcpdump} command.
+    Run \textbf{wireshark exe2.out \&} to load the packet trace recorded by the above \textbf{tcpdump} command.
     Mark and print two different RIP messages captured in your subnet (see Exercise 6 of Chapter 1).
     Exchange the printed RIP messages with students in other groups.
     You need eight different RIP messages for your lab report.
